<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="robot_hm_states_t" Id="{d4546153-783b-49db-8434-a0928e6e62e3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE robot_hm_states_t :
(
	START,
	RETRACT,
	RESETTING_FAULT,
	RELEASE,
	ROTATE,
	HOME,
	END
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>